cleaner js and better entity-classification ActiveEntity.classify()

--- a/python/static/css/main.css
+++ b/python/static/css/main.css
@@ -16,6 +16,11 @@ html,body{
     border-radius: 0px;
 }
 
+/*
+.navbar-brand {
+	font: normal 'Cookie', cursive;
+}*/
+
 
 /******** FOOTER *******/
 .footer{
