--- a/python/templates/base.html
+++ b/python/templates/base.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>GeoCoLD &#183; </title>
+    <title>
+      GeoCoLD 
+      {% if title %}
+      &#183; {{ title }}
+      {% endif %} 
+    </title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
