--- a/python/static/css/main.css
+++ b/python/static/css/main.css
@@ -5,11 +5,16 @@ html,body{
 }
 
 
+
+.map-container{
+    height:70%;
+}
+
 #map{
-    /*width:100%;
+	/*width:100%;
     height:100%;*/
     /*width:90%;*/
-    height:70%;
+    height:100%;
 }
 
 .navbar{
