--- a/app/templates/mapsite_test.html
+++ b/app/templates/mapsite_test.html
@@ -1,61 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main2.css') }}">
 
-<div class="content container-fluid map-container">
-  <div id="map"></div>
-  <div id="geocold-lookup"></div>  
-</div>
+<div class="map-container">
+    <div class="settings col-xs-12 col-md-3">
+      <div class="settings-head container-fluid">
+        <div id="progress-div" class="settings-progress col-md-9">100%</div>
+        <div class="settings-toggle col-md-3">
+          <a href="#" class="btn"><i id="settings-toggler" class="fa fa-plus-circle" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="setting-panel">
 
-<div id="mapsite" class="content container-fluid">
-      <h2>Result</h2>
-      <div class="row">
-        <div class="col-md-6">
           <div class="panel panel-success">
             <div class="panel-heading">
               <h3 class="panel-title">Identified Places</h3>
             </div>
-            <div class="panel-body">
+            <div class="panel-body" style="overflow-y: scroll; height: 200px">
               <ul class="list-group" id="id-places">
-                <!--
-                <li class="list-group-item">
-                  Göttingen
-                  <ul class="list-unstyled" style="margin-top:10px;">
-                    <li>
-                      <i class="fa fa-home" aria-hidden="true" style="margin-right: 10px"></i>
-                      <span><a href="#">URI</a></span>
-                    </li>
-                    <li>
-                      <i class="fa fa-map-marker" aria-hidden="true" style="margin-right: 10px"></i>
-                      <span>Koordinaten</span>
-                      <button class="marker-button" data-marker="asas">test</button>
-                    </li>
-                  </ul>
-                </li>
-
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                -->
+                
               </ul>
-              <!--
-              <table id="identified" class="table table-condensed table-striped">
-                <tr>
-                  <th>prefered label</th>
-                  <th>URI</th>
-                  <th>coordinates</th>
-                </tr>
-                <!-/-
-                <tr>
-                  <td>1</td>
-                  <td>Test</td>
-                  <td>Test</td>
-                </tr>
-                -/->
-              </table>
-              -->
             </div>
-          </div>  
-        </div>
-        <div class="col-md-6">
+          </div>
+
           <div class="panel panel-warning">
             <div class="panel-heading">
               <h3 class="panel-title">Unidentified URIs</h3>
@@ -65,23 +33,25 @@
                 <tr>
                   <th>URI</th>
                 </tr>
-                <!--
-                <tr>
-                  <td>1</td>
-                  <td>Test</td>
-                  <td>Test</td>
-                </tr>
-                -->
+                
               </table>
             </div>
-          </div>  
-        </div>
-        
-      </div>
-      <h2>Set a mark!</h2>
-      <button onclick="test()" type="button" class="btn btn-default">DER Kuhberg</button>
-      <button onclick="setMapMarker()" type="button" class="btn btn-default">Mark</button>
+          </div>
+
+          <div class="content container-fluid">
+            <h2>Set a mark!</h2>
+            <button onclick="test()" type="button" class="btn btn-default">DER Kuhberg</button>
+            <button onclick="setMapMarker()" type="button" class="btn btn-default">Mark</button>
+          </div>
+
+      </div>  
     </div>
+    <div style="height:100%;">
+        <div id="map"></div>
+        <div id="geocold-lookup"></div>  
+    </div>
+</div>
+
 
     <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='js/map.js') }}"></script>
     <script type="text/javascript" language="javascript">
@@ -129,16 +99,16 @@
           console.log('start lookup ...')
           
           let call = new Loading(individuals.length);
-          call.create_bar('#geocold-lookup', '#progress-load');
+          call.create_bar('#geocold-lookup', '#progress-load',  '#progress-div');
           
-          
+          /*
           for (let i = 0; i < individuals.length; i++) {
             console.log(individuals[i])
             let list = [individuals[i]]
             for (let j = 0; j < list.length; j++){
               lookup(JSON.stringify(list[j]), call);
             };
-          };
+          };*/
           
           
           /*
