settings-panel got collapse-button

--- a/app/templates/mapsite_test.html
+++ b/app/templates/mapsite_test.html
@@ -11,7 +11,7 @@
         </div>
         <i id="settings-toggler" class="fa fa-plus-circle" aria-hidden="true" data-toggle="collapse" data-target=".settings-panel"></i>
       </div>
-      <div class="settings-panel collapse in">
+      <div class="settings-panel collapse">
 
           <div class="panel panel-success">
             <div class="panel-heading">
